<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">TUL</string>
    <string name="login">Login</string>
    <string name="app_id">1436825226428892</string>
    <string name="google_maps_key">AIzaSyCh64XZrSCz-DDZq0VTzz8ukjoY0sommN8</string>
    <string name="cannot_connect_server">Cannot connect to server</string>
    <string name="error">Something went wrong!</string>
    <string name="internet">Internet connection not available!</string>
    <string name="copy_">Link Copied</string>
    <string name="success">200</string>
    <string name="invalid_access_token">420</string>
    <string name="treminate_account">405</string>
    <string name="pause_error">306</string>
    <string name="edit_error">302</string>
    <string name="payment_exceed_code">423</string>
    <string name="enter_email">Please enter email</string>
    <string name="enter_valid_email">Please enter a valid email</string>
    <string name="enter_password">Please enter password</string>
    <string name="error_password">Password must have minimum 8 characters</string>
    <string name="start_sharing_your_tuls">START SHARING YOUR TULs</string>
    <string name="log_in">LOG IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="login_with_facebook">LOGIN WITH FACEBOOK</string>
    <string name="email">Email</string>
    <string name="passowrd">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="by_signing_up_i_agree_to_the_terms_amp_conditions"><![CDATA[By signing up i agree to the Terms & Conditions]]></string>
    <string name="reset_password_hint">Please enter your registered email Id in order to get a reset link. You will be able to set a new password from there.</string>
    <string name="reset">RESET</string>
    <string name="full_name">Full Name</string>
    <string name="enter_phone_no">Enter Phone No.</string>
    <string name="error_first_name">Please enter First Name with minimum 2 characters.</string>
    <string name="error_company_name">Please enter Company Name with minimum 2 characters.</string>
    <string name="error_last_name">Please enter Last Name with minimum 2 characters.</string>
    <string name="error_code">Please enter country code.</string>
    <string name="error_pic">Please add your profile picture.</string>
    <string name="enter_phone">Please enter phone number</string>
    <string name="enter_vat">Please enter VAT number</string>
    <string name="enter_loc">Please enter Location</string>
    <string name="enter_valid_number">Please enter a valid phone number</string>
    <string name="verfication_hint_msg">Enter your verification code we sent to</string>
    <string name="call">CALL</string>
    <string name="lender_side">LENDER SIDE</string>
    <string name="seller_side">SELLER SIDE</string>
    <string name="user_side">USER SIDE</string>
    <string name="lorem_ipsum_dolor">Lorem Ipsum Dolor</string>
    <string name="lorem_ipsum_desc">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="looking_for_a_tul">Looking For A TUL</string>
    <string name="become_a_tul_lender">Become a TUL Lender</string>
    <string name="listed_tuls">LISTED TULs</string>
    <string name="my_short_list">MY FAVOURITES</string>
    <string name="update">UPDATE</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="add_your_first_tul">Add Your First TUL</string>
    <string name="enter_title">Enter Title</string>
    <string name="title">TITLE</string>
    <string name="select_category">Select Category</string>
    <string name="enter_descrption">Enter Descrption</string>
    <string name="descrption">DESCRIPTION</string>
    <string name="enter_price">Enter Price</string>
    <string name="price">PRICE</string>
    <string name="additional_prices">Additional Prices</string>
    <string name="address">Address</string>
    <string name="address_caps">ADDRESS</string>
    <string name="select_address">Select Address</string>
    <string name="rules">Rules</string>
    <string name="no_tuls">NO. OF TULs AVAILABLE</string>
    <string name="list_tul">List Your TUL</string>
    <string name="security_charges">SECURITY DEPOSIT (REFUNDABLE)</string>
    <string name="convenience_fee">EXTRA FEE</string>
    <string name="add_additional_prices">Add Aditional Prices</string>
    <string name="transition">transition</string>
    <string name="add_images_video">Add Images/Video</string>
    <string name="enter_rule">Enter Rule.</string>
    <string name="cancel">Cancel</string>
    <string name="add">ADD</string>
    <string name="add_rules">ADD RULES</string>
    <string name="set_location_on_map">SET LOCATION ON MAP</string>
    <string name="search">Search</string>
    <string name="no_location_found">No Location Found.</string>
    <string name="fetching_current_location">Fetching Current Location</string>
    <string name="capture_video">Add Video</string>
    <string name="add_photo">Add Image</string>
    <string name="confrim">Confirm</string>
    <string name="contact">Contact</string>
    <string name="delete_message">Are you sure you want to delete image or video?</string>
    <string name="error_image_video_count">You cannot upload more than 7 Images/Videos</string>
    <string name="error_image_count">You cannot upload more than 6 Images</string>
    <string name="error_video_count">You cannot upload more than 1 Video</string>
    <string name="save_amp_next"><![CDATA[Save & Next]]></string>
    <string name="discard">Discard</string>
    <string name="discard_message">Are you sure you want to discard?</string>
    <string name="all_data_discard">By going back your all data will be discarded. Are you sure you want to discard?</string>
    <string name="cancel_message">By cancelling booking you will be charged (£ 5) as per TUL policies. Are you sure you want to cancel?</string>
    <string name="error_title">Please enter title</string>
    <string name="error_category">Please select category</string>
    <string name="error_descrption">Please enter description</string>
    <string name="error_no_tuls">Please enter no. of TULs</string>
    <string name="error_no_valid">Please enter a valid quantity</string>
    <string name="error_price">Please enter a valid price</string>
    <string name="error_discount">Please enter a valid discount</string>
    <string name="error_valid_price">Please enter  a valid price</string>
    <string name="error_addtional_prices">Please enter additional prices</string>
    <string name="error_address">Please enter address</string>
    <string name="error_rules">Please enter rules</string>
    <string name="error_image_video">Please add at least 1 video or image.</string>
    <string name="security_fee_error">Please add valid security deposit </string>
    <string name="extra_fee_error">Please add valid extra fee </string>
    <string name="error_valid_fee">Please enter a valid fee</string>
    <string name="weekdays">Weekdays</string>
    <string name="only_weekends">Only Weekends</string>
    <string name="both">Both</string>
    <string name="available">AVAILABLE</string>
    <string name="start_time">START TIME</string>
    <string name="end_time">END TIME</string>
    <string name="tul_delivery_available">TUL Delivery Available</string>
    <string name="delivery_charges">DELIVERY CHARGES</string>
    <string name="tul_delivery_pickup_time">TUL DELIVERY / PICKUP TIME</string>
    <string name="start_time_">Start time -</string>
    <string name="prefrences">PREFERENCES</string>
    <string name="error_start_time">Please enter start time</string>
    <string name="error_end_time">Please enter end time</string>
    <string name="error_delivery_charges">Please enter delivery charges</string>
    <string name="error_delivery_Option">Please enter delivery option</string>
    <string name="error_condition">Please enter condition of the TUL</string>
    <string name="error_delivery_Option_inter">Please enter International delivery charges.</string>
    <string name="error_delivery_Option_local">Please enter Local delivery charges.</string>
    <string name="error_valid_charges">Please enter valid charges</string>
    <string name="error_delivery_start_time">Please enter delivery start time</string>
    <string name="error_delivery_end_time">Please enter delivery end time</string>
    <string name="enter_your_bank_detail_to_recieve_your_fund_in_future">Enter your bank detail to recieve your fund in future.</string>
    <string name="country_code">country code</string>
    <string name="add_currency">Currency</string>
    <string name="account_no">ACCOUNT NO.</string>
    <string name="sort_code">SORT CODE</string>
    <string name="sort_code_routing_number">SORT CODE/ROUTING NO.</string>
    <string name="first_name">First Name</string>
    <string name="first_name_caps">FIRST NAME</string>
    <string name="last_name">Last Name</string>
    <string name="last_name_caps">LAST NAME</string>
    <string name="city">CITY</string>
    <string name="state">STATE</string>
    <string name="postal_code">POSTAL CODE</string>
    <string name="add_id_verification_document">Add id verification document</string>
    <string name="add_bank_detail">Add Bank Detail</string>
    <string name="dob">Date of Birth</string>
    <string name="error_country_code">Please select country code</string>
    <string name="error_currency">Please select add_currency</string>
    <string name="error_account">Please enter Account no.</string>
    <string name="error_sort_code">Please enter sort code</string>
    <string name="error_city">Please enter city</string>
    <string name="error_state">Please enter state</string>
    <string name="error_postal_code">Please enter Postal Code</string>
    <string name="error_dob">Please specify your DOB</string>
    <string name="error_document">Please add a document for verification</string>
    <string name="Skip_new">SKIP</string>
    <string name="done">DONE</string>
    <string name="change_password">Change Password</string>
    <string name="notifications">Notifications</string>
    <string name="blocked_user">Blocked User</string>
    <string name="about">About</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="faq">FAQ</string>
    <string name="tell_a_friend">Tell a Friend</string>
    <string name="raise_dispute">Raise Dispute</string>
    <string name="logout">LOGOUT</string>
    <string name="i_hereby_declare_that_the_service_has_been_acknowledged">I hereby declare that the service has been acknowledged.</string>
    <string name="sign_here">SIGN HERE</string>
    <string name="report">Report</string>
    <string name="we_have_sent_a_verification_link_to_your_email_please_click_this_to_continue_the_sign_up_process">We have sent a verification link to your email, please click this to continue the sign up process.</string>
    <string name="resend">RESEND</string>
    <string name="verify_your_email">VERIFY YOUR EMAIL</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to Logout?</string>
    <string name="confirm">Confirm</string>
    <string name="take_a_photo">Take A Photo</string>
    <string name="select_from_gallery">Select From Gallery</string>
    <string name="view_photo">View Photo</string>
    <string name="delete_account">DELETE ACCOUNT</string>
    <string name="follow_us_on_instagram">Follow us on Instagram</string>
    <string name="change_language">Change Language</string>
</resources>