<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/white_round_corners"
        android:gravity="center_horizontal|bottom"
        android:orientation="vertical">


        <customviews.RegularTextView
            android:id="@+id/txt_take_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/white_round_ripple"
            android:gravity="center"
            android:text="@string/take_a_photo"
            android:textColor="@color/colorPrimary" />


        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/hint_color_light" />

        <customviews.RegularTextView
            android:id="@+id/txt_option_gallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/white_round_ripple"
            android:gravity="center"
            android:text="@string/select_from_gallery"
            android:textColor="@color/colorPrimary" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/hint_color_light" />

        <customviews.RegularTextView
            android:id="@+id/txt_option_vp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/white_round_ripple"
            android:gravity="center"
            android:text="@string/view_photo"
            android:textColor="@color/colorPrimary" />

        <View
            android:id="@+id/view_full"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/hint_color_light" />

        <customviews.RegularTextView
            android:id="@+id/txt_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/white_round_ripple"
            android:gravity="center"
            android:textAllCaps="true"
            android:text="@string/cancel"
            android:textColor="@color/hint_color_dark" />
    </LinearLayout>

</LinearLayout>