<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_color"
    android:gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <customviews.SemiboldTextView
            android:id="@+id/txt_verify_email_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/verify_your_email"
            android:textAllCaps="true"
            android:textColor="@color/white_color" />


    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_outer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/white_round_default"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_fields"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_mail" />

                <customviews.RegularTextView
                    android:id="@+id/txt_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/we_have_sent_a_verification_link_to_your_email_please_click_this_to_continue_the_sign_up_process"
                    android:textColor="@color/black_color" />


            </LinearLayout>


            <customviews.SemiboldTextView
                android:id="@+id/txt_resend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/primary_round_ripple"
                android:text="@string/resend"
                android:textAllCaps="true"
                android:textColor="@color/white_color" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/hint_color_dark" />

            <customviews.SemiboldTextView
                android:id="@+id/txt_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/white_round_ripple"
                android:gravity="center"
                android:text="@string/log_in"
                android:textAllCaps="true"
                android:textColor="@color/black_color"
                android:visibility="gone" />

            <customviews.SemiboldTextView
                android:id="@+id/txt_skip_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Skip_new"
                android:gravity="center"
                android:textColor="@color/black_color" />

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/img_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/primary_ripple"
        android:src="@mipmap/ic_cance_mail" />

</LinearLayout>